fix theme dark visibility

--- a/src/Header.module.css
+++ b/src/Header.module.css
@@ -10,7 +10,12 @@
     width: auto;
 }
 
-.tagline {
+.taglineDark {
     font-size: 0.875rem;
     color: white;
+}
+
+.taglineLight {
+    font-size: 0.875rem;
+    color: black;
 }
